Update buildspec, appsec, add scripts files

--- a/appspec.yml
+++ b/appspec.yml
@@ -1,5 +1,29 @@
 version: 0.0
 os: linux
 files:
-  - source: ./aws-springboot-devtest-0.0.1-SNAPSHOT.jar
-    destination: /tmp
+  - source: /
+    destination: /home/ec2-user/apps
+
+permissions:
+  - object: /
+    pattern: "**"
+    owner: ec2-user
+    group: ec2-user
+
+hooks:
+  BeforeInstall:
+    - location: clear_server.sh
+      timeout: 300
+      runas: ec2-user
+  AfterInstall:
+    - location: grant_privileges.sh
+      timeout: 300
+      runas: ec2-user
+  ApplicationStart:
+    - location: start_server.sh
+      timeout: 20
+      runas: ec2-user
+  ApplicationStop:
+    - location: stop_server.sh
+      timeout: 20
+      runas: ec2-user
